--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,5 @@ node_js:
   - "0.11"
   - "0.10"
   - "iojs"
-before_script:
-  - npm install -g browserify
-  - chmod 775 ./test/run_test.sh
-  
-script: ./test/run_test.sh
+before_script: chmod 775 ./scripts/run_test.sh
+script: ./scripts/run_test.sh
