--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "sh scripts/build.sh",
+    "build": "sh ./scripts/build.sh",
     "start": "echo \"Nothing to do\" && exit 1"
   },
   "repository": {
