--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
-{
+﻿{
   "name": "eddy-malou",
   "version": "0.0.3",
   "description": "L'extension officielle de la congolexicomatisation des lois du marché !",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "sh ./scripts/build.sh",
-    "start": "echo \"Nothing to do\" && exit 1"
+    "build": "sh ./scripts/build.sh"
   },
   "repository": {
     "type": "git",
